Issue #2768439 by Shreya Shetty: CSS of required field is broken in chrome . Replace the asterisk  by a SVG

--- a/starterkits/less/less/component/form.less
+++ b/starterkits/less/less/component/form.less
@@ -69,9 +69,11 @@
 // Use CSS for required mark.
 // Inspired from https://www.drupal.org/node/2152217.
 .form-required:after {
-  color: #e00;
-  /* Use a Unicode symbol to prevent screen-readers from announcing the text. */
-  content: " \204E ";
-  line-height: 1;
-  vertical-align: super;
+  content:"";
+  background-image: url(../../required.svg);
+  display: inline-block;
+  line-height:1;
+  background-size: 10px 7px;
+  width: 10px;
+  height: 7px;
 }
